--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ android {
     }
 
 }
-
+ext {
+    dagger_version = '2.17'
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -56,7 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "com.github.moxy-community:moxy:2.1.2"
-    annotationProcessor "com.github.moxy-community:moxy-compiler:2.1.2"
+    kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-android:2.1.2"
     implementation "com.github.moxy-community:moxy-app-compat:2.1.2"
     implementation "com.github.moxy-community:moxy-material:2.1.2"
@@ -69,5 +71,11 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt  'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.room:room-rxjava2:2.2.5'
+
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
 
 }
